syntax-parser.output
Terminals unused in grammar

   PRINT
   SCAN
   SENAO
   RETURN
   ABRE_CHAVES
   FECHA_CHAVES
   ENQUANTO


Grammar

    0 $accept: S $end

    1 S: declaracao S_linha
    2  | condicao
    3  | atrib
    4  | exprecao

    5 S_linha: /* empty */
    6        | PEV S

    7 declaracao: INT atrib

    8 atrib: ID ATRIBUICAO exprecao

    9 condicao: SE ABRE_PARENTESES comparacao FECHA_PARENTESES

   10 comparacao: fator IGUAL fator
   11           | fator DIFERENTE fator
   12           | fator MAIOR fator
   13           | fator MENOR fator
   14           | fator MAIOR_IGUAL fator
   15           | fator MENOR_IGUAL fator

   16 exprecao: exprecao MAIS termo
   17         | exprecao MENOS termo
   18         | termo

   19 termo: termo VEZES fator
   20      | termo DIVIDIDO fator
   21      | termo RESTO fator
   22      | fator

   23 fator: ID
   24      | NUM
   25      | ABRE_PARENTESES exprecao FECHA_PARENTESES


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 7
ID (259) 8 23
PRINT (260)
SCAN (261)
SE (262) 9
SENAO (263)
RETURN (264)
MAIS (265) 16
MENOS (266) 17
VEZES (267) 19
DIVIDIDO (268) 20
RESTO (269) 21
ATRIBUICAO (270) 8
MENOR (271) 13
MAIOR (272) 12
MENOR_IGUAL (273) 15
MAIOR_IGUAL (274) 14
IGUAL (275) 10
DIFERENTE (276) 11
PEV (277) 6
NUM (278) 24
ABRE_CHAVES (279)
FECHA_CHAVES (280)
ABRE_PARENTESES (281) 9 25
FECHA_PARENTESES (282) 9 25
ENQUANTO (283)


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
S (30)
    on left: 1 2 3 4, on right: 0 6
S_linha (31)
    on left: 5 6, on right: 1
declaracao (32)
    on left: 7, on right: 1
atrib (33)
    on left: 8, on right: 3 7
condicao (34)
    on left: 9, on right: 2
comparacao (35)
    on left: 10 11 12 13 14 15, on right: 9
exprecao (36)
    on left: 16 17 18, on right: 4 8 16 17 25
termo (37)
    on left: 19 20 21 22, on right: 16 17 18 19 20 21
fator (38)
    on left: 23 24 25, on right: 10 11 12 13 14 15 19 20 21 22


state 0

    0 $accept: . S $end

    INT              shift, and go to state 1
    ID               shift, and go to state 2
    SE               shift, and go to state 3
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    S           go to state 6
    declaracao  go to state 7
    atrib       go to state 8
    condicao    go to state 9
    exprecao    go to state 10
    termo       go to state 11
    fator       go to state 12


state 1

    7 declaracao: INT . atrib

    ID  shift, and go to state 13

    atrib  go to state 14


state 2

    8 atrib: ID . ATRIBUICAO exprecao
   23 fator: ID .

    ATRIBUICAO  shift, and go to state 15

    $default  reduce using rule 23 (fator)


state 3

    9 condicao: SE . ABRE_PARENTESES comparacao FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 16


state 4

   24 fator: NUM .

    $default  reduce using rule 24 (fator)


state 5

   25 fator: ABRE_PARENTESES . exprecao FECHA_PARENTESES

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    exprecao  go to state 18
    termo     go to state 11
    fator     go to state 12


state 6

    0 $accept: S . $end

    $end  shift, and go to state 19


state 7

    1 S: declaracao . S_linha

    PEV  shift, and go to state 20

    $default  reduce using rule 5 (S_linha)

    S_linha  go to state 21


state 8

    3 S: atrib .

    $default  reduce using rule 3 (S)


state 9

    2 S: condicao .

    $default  reduce using rule 2 (S)


state 10

    4 S: exprecao .
   16 exprecao: exprecao . MAIS termo
   17         | exprecao . MENOS termo

    MAIS   shift, and go to state 22
    MENOS  shift, and go to state 23

    $default  reduce using rule 4 (S)


state 11

   18 exprecao: termo .
   19 termo: termo . VEZES fator
   20      | termo . DIVIDIDO fator
   21      | termo . RESTO fator

    VEZES     shift, and go to state 24
    DIVIDIDO  shift, and go to state 25
    RESTO     shift, and go to state 26

    $default  reduce using rule 18 (exprecao)


state 12

   22 termo: fator .

    $default  reduce using rule 22 (termo)


state 13

    8 atrib: ID . ATRIBUICAO exprecao

    ATRIBUICAO  shift, and go to state 15


state 14

    7 declaracao: INT atrib .

    $default  reduce using rule 7 (declaracao)


state 15

    8 atrib: ID ATRIBUICAO . exprecao

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    exprecao  go to state 27
    termo     go to state 11
    fator     go to state 12


state 16

    9 condicao: SE ABRE_PARENTESES . comparacao FECHA_PARENTESES

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    comparacao  go to state 28
    fator       go to state 29


state 17

   23 fator: ID .

    $default  reduce using rule 23 (fator)


state 18

   16 exprecao: exprecao . MAIS termo
   17         | exprecao . MENOS termo
   25 fator: ABRE_PARENTESES exprecao . FECHA_PARENTESES

    MAIS              shift, and go to state 22
    MENOS             shift, and go to state 23
    FECHA_PARENTESES  shift, and go to state 30


state 19

    0 $accept: S $end .

    $default  accept


state 20

    6 S_linha: PEV . S

    INT              shift, and go to state 1
    ID               shift, and go to state 2
    SE               shift, and go to state 3
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    S           go to state 31
    declaracao  go to state 7
    atrib       go to state 8
    condicao    go to state 9
    exprecao    go to state 10
    termo       go to state 11
    fator       go to state 12


state 21

    1 S: declaracao S_linha .

    $default  reduce using rule 1 (S)


state 22

   16 exprecao: exprecao MAIS . termo

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    termo  go to state 32
    fator  go to state 12


state 23

   17 exprecao: exprecao MENOS . termo

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    termo  go to state 33
    fator  go to state 12


state 24

   19 termo: termo VEZES . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 34


state 25

   20 termo: termo DIVIDIDO . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 35


state 26

   21 termo: termo RESTO . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 36


state 27

    8 atrib: ID ATRIBUICAO exprecao .
   16 exprecao: exprecao . MAIS termo
   17         | exprecao . MENOS termo

    MAIS   shift, and go to state 22
    MENOS  shift, and go to state 23

    $default  reduce using rule 8 (atrib)


state 28

    9 condicao: SE ABRE_PARENTESES comparacao . FECHA_PARENTESES

    FECHA_PARENTESES  shift, and go to state 37


state 29

   10 comparacao: fator . IGUAL fator
   11           | fator . DIFERENTE fator
   12           | fator . MAIOR fator
   13           | fator . MENOR fator
   14           | fator . MAIOR_IGUAL fator
   15           | fator . MENOR_IGUAL fator

    MENOR        shift, and go to state 38
    MAIOR        shift, and go to state 39
    MENOR_IGUAL  shift, and go to state 40
    MAIOR_IGUAL  shift, and go to state 41
    IGUAL        shift, and go to state 42
    DIFERENTE    shift, and go to state 43


state 30

   25 fator: ABRE_PARENTESES exprecao FECHA_PARENTESES .

    $default  reduce using rule 25 (fator)


state 31

    6 S_linha: PEV S .

    $default  reduce using rule 6 (S_linha)


state 32

   16 exprecao: exprecao MAIS termo .
   19 termo: termo . VEZES fator
   20      | termo . DIVIDIDO fator
   21      | termo . RESTO fator

    VEZES     shift, and go to state 24
    DIVIDIDO  shift, and go to state 25
    RESTO     shift, and go to state 26

    $default  reduce using rule 16 (exprecao)


state 33

   17 exprecao: exprecao MENOS termo .
   19 termo: termo . VEZES fator
   20      | termo . DIVIDIDO fator
   21      | termo . RESTO fator

    VEZES     shift, and go to state 24
    DIVIDIDO  shift, and go to state 25
    RESTO     shift, and go to state 26

    $default  reduce using rule 17 (exprecao)


state 34

   19 termo: termo VEZES fator .

    $default  reduce using rule 19 (termo)


state 35

   20 termo: termo DIVIDIDO fator .

    $default  reduce using rule 20 (termo)


state 36

   21 termo: termo RESTO fator .

    $default  reduce using rule 21 (termo)


state 37

    9 condicao: SE ABRE_PARENTESES comparacao FECHA_PARENTESES .

    $default  reduce using rule 9 (condicao)


state 38

   13 comparacao: fator MENOR . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 44


state 39

   12 comparacao: fator MAIOR . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 45


state 40

   15 comparacao: fator MENOR_IGUAL . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 46


state 41

   14 comparacao: fator MAIOR_IGUAL . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 47


state 42

   10 comparacao: fator IGUAL . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 48


state 43

   11 comparacao: fator DIFERENTE . fator

    ID               shift, and go to state 17
    NUM              shift, and go to state 4
    ABRE_PARENTESES  shift, and go to state 5

    fator  go to state 49


state 44

   13 comparacao: fator MENOR fator .

    $default  reduce using rule 13 (comparacao)


state 45

   12 comparacao: fator MAIOR fator .

    $default  reduce using rule 12 (comparacao)


state 46

   15 comparacao: fator MENOR_IGUAL fator .

    $default  reduce using rule 15 (comparacao)


state 47

   14 comparacao: fator MAIOR_IGUAL fator .

    $default  reduce using rule 14 (comparacao)


state 48

   10 comparacao: fator IGUAL fator .

    $default  reduce using rule 10 (comparacao)


state 49

   11 comparacao: fator DIFERENTE fator .

    $default  reduce using rule 11 (comparacao)
